Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ h3 {
   font-family: "montserrat", sans-serif;
   font-size: 16px;
   font-weight: 600;
-  margin-top: 8px;
+  margin-top: 16px;
   margin-bottom: 0px;
 }
 
